--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-10 col-sm-offset-1" ng-controller="Links">
-					<div class="row links" ng-repeat="category in categories">
+					<div class="row links" ng-repeat="group in groups">
 						<div class="col-xs-12">
-							<h3>{{category.category}}</h3>
+							<h3>{{name}}</h3>
 						</div>
-						<div class="col-xs-3" ng-repeat="link in category.links">
+						<div class="col-xs-3" ng-repeat="link in group.links">
 							<a href="{{link.url}}" target="_blank" class="link">
 								<p>{{link.text}}</p>
 							</a>
