Removal of target="_blank"
It's a start page, you don't want to keep it open.

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 							<h3>{{group.name}}</h3>
 						</div>
 						<div class="col-xs-3" ng-repeat="link in group.links">
-							<a href="{{link.url}}" target="_blank" class="link">
+							<a href="{{link.url}}" class="link">
 								<p>{{link.text}}</p>
 							</a>
 						</div>
