--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html ng-app>
-	<head>
-		<title>Start</title>
-		<!-- build:css assets/css/tidy-combined.css -->
-		<link href="compiled/css/combined.css" rel="stylesheet" media="screen">
-		<!-- /build -->
-		<script src="assets/js/combined.js"></script>
-	</head>
-	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<h1>Start</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1">
-					<form method="get" action="http://www.google.com/search" role="form" class="form-inline">
-						<div class="form-group">
-							<input type="text" name="q" size="31" maxlength="255" value="" placeholder="Google Search..." class="form-control"/>
-						</div>
-						<button type="submit" class="btn btn-default">Search</button>
-					</form>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1" ng-controller="Links">
-					<div class="row links" ng-repeat="group in groups">
-						<div class="col-xs-12">
-							<h3>{{group.name}}</h3>
-						</div>
-						<div class="col-xs-3" ng-repeat="link in group.links">
-							<a href="{{link.url}}" class="link">
-								<p>{{link.text}}</p>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
+    <head>
+        <title>スタート</title>
+        <meta charset="UTF-8" />
+        <!-- build:css assets/css/tidy-combined.css -->
+        <link href="compiled/css/combined.css" rel="stylesheet" media="screen">
+        <!-- /build -->
+        <script src="assets/js/combined.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1>スタート</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <form method="get" action="http://www.google.com/search" role="form" class="form-inline">
+                        <div class="form-group">
+                            <input type="text" name="q" size="31" maxlength="255" value="" placeholder="Google Search..." class="form-control"/>
+                        </div>
+                        <button type="submit" class="btn btn-default">Search</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2" ng-controller="Links">
+                    <div class="row">
+                        <div class="col-xs-6 group" ng-repeat="group in groups">
+                            <h3>{{group.name}}</h3>
+                            <a href="{{link.url}}" class="link" ng-repeat="link in group.links" title="{{link.text}}">
+                                {{link.text}}
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
