Clean Up & Attempting Documentation

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<!-- build:remove --><!-- EDIT THIS FILE --><!-- /build -->
 <html ng-app>
     <head>
         <title>スタート</title>
         <meta charset="UTF-8" />
         <!-- build:css assets/css/tidy-combined.css -->
+        <!-- This builds the css file by looking at the markup and stripping excess styles -->
         <link href="compiled/css/combined.css" rel="stylesheet" media="screen">
         <!-- /build -->
         <script src="assets/js/combined.js"></script>
