--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<div id="app"></div>
 
-	<script src="dist/js/app.js"></script>
+	<script src="bundle.js"></script>
+	<!-- <script src="dist/js/app.js"></script> -->
 </body>
 </html>
