--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	<meta charset="UTF-8">
 	<title>スタート</title>
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">-->
 </head>
 <body>
 	<div id="app"></div>
 
-	<!-- <script src="bundle.js"></script> -->
-	<script src="assets/js/bundle.js"></script>
+	<script src="jspm_packages/system.js"></script>
+	<script src="config.js"></script>
+	<script>
+		System.import('lib/main.js');
+	</script>
 </body>
 </html>
